--- a/assets/custom.css
+++ b/assets/custom.css
@@ -39,7 +39,7 @@ header .h2.site-header__logo { padding-left: 20px;}
 #shopify-section-1528238808944 { padding: 0;}
 /* artist page */
 .contact-store span{ margin-left: 10px;}
-.contact-store h3{ color: #C69130; padding-top: 20px; display: block; margin-bottom: 10px;}
+.contact-store h3{ color: #C69130; padding-top: 20px; display: block; margin-bottom: 10px; text-transform: uppercase; font-size: 20px;}
 .contact-store span { padding-bottom: 13px; display: inline-block;}
 .contact-store .fa-envelope::before, .contact-store .fa-phone-volume::before { content: "\f0e0"; font: normal normal normal 14px/1 FontAwesome; }
 .contact-store .fa-phone-volume::before{ content:"\f2a0";}
