--- a/assets/custom.css
+++ b/assets/custom.css
@@ -143,6 +143,7 @@ header.site-header{ top:0 !important;}
 @media screen and (max-width: 1475px){
 .site-nav button, .site-nav a { font-size: 14px;}
 .slideshow.slideshow--large { height: 650px;}
+#Slideshow-1527037810901 .box { background-color: #fff;}
 }
 @media screen and (max-width: 1326px){
 nav { width: 100% !important;}
@@ -207,6 +208,7 @@ header.site-header img { width: 194px;}
 .adboutusright { display: none;}
 .adboutusleft { float: none; width: 96%; padding: 35px 10px 10px 10px; text-align: center;}
 #shopify-section-1527123950217 .feature-row { width: 100%; text-align: center; display: block; margin-top: 0;}
+#shopify-section-1528238500620 .grid__item.medium-up--two-thirds.medium-up--push-one-sixth{ width: 100%;}
 }
 @media screen and (max-width: 749px){
 .grid{ margin-left: 0;}
