--- a/assets/custom.css
+++ b/assets/custom.css
@@ -38,6 +38,7 @@ header .h2.site-header__logo { padding-left: 20px;}
 #shopify-section-1528238500620 .grid__item.medium-up--two-thirds.medium-up--push-one-sixth { width: 70%;}
 #shopify-section-1528238808944 { padding: 0;}
 /* artist page */
+.contact-store {display: none;}
 .contact-store span{ margin-left: 10px;}
 .contact-store h3{ color: #C69130; padding-top: 20px; display: block; margin-bottom: 10px; text-transform: uppercase; font-size: 20px;}
 .contact-store span { padding-bottom: 13px; display: inline-block;}
