--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -89,7 +89,7 @@
           <ul class="list--inline site-footer__social-icons social-icons">
             {% if settings.social_facebook_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_facebook_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_facebook_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-facebook' %}
                   <span class="icon__fallback-text">Facebook</span>
                 </a>
@@ -97,7 +97,7 @@
             {% endif %}
             {% if settings.social_twitter_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_twitter_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_twitter_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-twitter' %}
                   <span class="icon__fallback-text">Twitter</span>
                 </a>
@@ -105,7 +105,7 @@
             {% endif %}
             {% if settings.social_pinterest_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_pinterest_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_pinterest_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-pinterest' %}
                   <span class="icon__fallback-text">Pinterest</span>
                 </a>
@@ -113,7 +113,7 @@
             {% endif %}
             {% if settings.social_instagram_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_instagram_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_instagram_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-instagram' %}
                   <span class="icon__fallback-text">Instagram</span>
                 </a>
@@ -121,7 +121,7 @@
             {% endif %}
             {% if settings.social_tumblr_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_tumblr_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_tumblr_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-tumblr' %}
                   <span class="icon__fallback-text">Tumblr</span>
                 </a>
@@ -129,7 +129,7 @@
             {% endif %}
             {% if settings.social_snapchat_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_snapchat_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_snapchat_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-snapchat' %}
                   <span class="icon__fallback-text">Snapchat</span>
                 </a>
@@ -137,7 +137,7 @@
             {% endif %}
             {% if settings.social_youtube_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_youtube_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_youtube_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-youtube' %}
                   <span class="icon__fallback-text">YouTube</span>
                 </a>
@@ -145,7 +145,7 @@
             {% endif %}
             {% if settings.social_vimeo_link != blank %}
               <li>
-                <a class="social-icons__link" href="{{ settings.social_vimeo_link | escape }}" aria-describedby="a11y-external-message">
+                <a class="social-icons__link" href="{{ settings.social_vimeo_link | escape }}" aria-describedby="a11y-external-message" target="_blank">
                   {% include 'icon-vimeo' %}
                   <span class="icon__fallback-text">Vimeo</span>
                 </a>
